--- a/Strokes/Base.lproj/LaunchScreen.storyboard
+++ b/Strokes/Base.lproj/LaunchScreen.storyboard
@@ -18,25 +18,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="水" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XaM-if-v5I">
-                                <rect key="frame" x="108.5" y="250" width="158" height="187"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="157"/>
-                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="loading" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pWH-2r-btW">
-                                <rect key="frame" x="132.5" y="200" width="110.5" height="42"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
-                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <searchBar contentMode="redraw" searchBarStyle="prominent" placeholder="Search for a character" translatesAutoresizingMaskIntoConstraints="NO" id="rrN-wW-vTg">
+                                <rect key="frame" x="0.0" y="20" width="375" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wvf-Pt-JDV">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Naw-s8-918"/>
+                                    <barButtonItem enabled="NO" title="Toggle Outline" id="Q6O-xt-ir6"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="77p-o6-IQL"/>
+                                    <barButtonItem enabled="NO" title="Refresh" id="eLm-m4-iyi"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="KFW-l3-PjN"/>
+                                </items>
+                            </toolbar>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1wr-xA-bMo">
+                                <rect key="frame" x="0.0" y="76" width="375" height="547"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="loading" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14x-Kz-3A0">
+                                        <rect key="frame" x="140" y="255.5" width="95" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="14x-Kz-3A0" firstAttribute="centerX" secondItem="1wr-xA-bMo" secondAttribute="centerX" id="qBy-1O-mm0"/>
+                                    <constraint firstItem="14x-Kz-3A0" firstAttribute="centerY" secondItem="1wr-xA-bMo" secondAttribute="centerY" id="seE-a1-NBZ"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="pWH-2r-btW" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="GTK-6L-GcF"/>
-                            <constraint firstItem="XaM-if-v5I" firstAttribute="top" secondItem="pWH-2r-btW" secondAttribute="bottom" constant="8" symbolic="YES" id="ID4-Mj-rnf"/>
-                            <constraint firstItem="XaM-if-v5I" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="aqb-gB-Sgo"/>
-                            <constraint firstItem="XaM-if-v5I" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="lHg-o4-u4q"/>
+                            <constraint firstItem="rrN-wW-vTg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LvE-q6-CN1"/>
+                            <constraint firstItem="1wr-xA-bMo" firstAttribute="top" secondItem="rrN-wW-vTg" secondAttribute="bottom" id="OWk-ur-tbN"/>
+                            <constraint firstItem="1wr-xA-bMo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="RDF-Oo-XJV"/>
+                            <constraint firstItem="1wr-xA-bMo" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="SRB-Ut-9Id"/>
+                            <constraint firstItem="wvf-Pt-JDV" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ZsC-mF-ZdI"/>
+                            <constraint firstItem="1wr-xA-bMo" firstAttribute="top" secondItem="rrN-wW-vTg" secondAttribute="bottom" id="d3M-Wx-41u"/>
+                            <constraint firstItem="rrN-wW-vTg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="dm1-im-FuO"/>
+                            <constraint firstItem="wvf-Pt-JDV" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="esZ-y1-yni"/>
+                            <constraint firstItem="wvf-Pt-JDV" firstAttribute="top" secondItem="1wr-xA-bMo" secondAttribute="bottom" id="h53-PQ-aBO"/>
+                            <constraint firstItem="wvf-Pt-JDV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="iti-8C-PM3"/>
+                            <constraint firstItem="rrN-wW-vTg" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="lYM-Ac-O5d"/>
+                            <constraint firstItem="wvf-Pt-JDV" firstAttribute="top" secondItem="1wr-xA-bMo" secondAttribute="bottom" id="rWJ-zP-xl9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
