--- a/Strokes/Base.lproj/LaunchScreen.storyboard
+++ b/Strokes/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" searchBarStyle="prominent" placeholder="Search for a character" translatesAutoresizingMaskIntoConstraints="NO" id="rrN-wW-vTg">
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search for a character" translatesAutoresizingMaskIntoConstraints="NO" id="rrN-wW-vTg">
                                 <rect key="frame" x="0.0" y="20" width="375" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
@@ -32,25 +32,15 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="KFW-l3-PjN"/>
                                 </items>
                             </toolbar>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1wr-xA-bMo">
-                                <rect key="frame" x="0.0" y="76" width="375" height="547"/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="rrN-wW-vTg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LvE-q6-CN1"/>
-                            <constraint firstItem="1wr-xA-bMo" firstAttribute="top" secondItem="rrN-wW-vTg" secondAttribute="bottom" id="OWk-ur-tbN"/>
-                            <constraint firstItem="1wr-xA-bMo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="RDF-Oo-XJV"/>
-                            <constraint firstItem="1wr-xA-bMo" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="SRB-Ut-9Id"/>
                             <constraint firstItem="wvf-Pt-JDV" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ZsC-mF-ZdI"/>
-                            <constraint firstItem="1wr-xA-bMo" firstAttribute="top" secondItem="rrN-wW-vTg" secondAttribute="bottom" id="d3M-Wx-41u"/>
                             <constraint firstItem="rrN-wW-vTg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="dm1-im-FuO"/>
                             <constraint firstItem="wvf-Pt-JDV" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="esZ-y1-yni"/>
-                            <constraint firstItem="wvf-Pt-JDV" firstAttribute="top" secondItem="1wr-xA-bMo" secondAttribute="bottom" id="h53-PQ-aBO"/>
                             <constraint firstItem="wvf-Pt-JDV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="iti-8C-PM3"/>
                             <constraint firstItem="rrN-wW-vTg" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="lYM-Ac-O5d"/>
-                            <constraint firstItem="wvf-Pt-JDV" firstAttribute="top" secondItem="1wr-xA-bMo" secondAttribute="bottom" id="rWJ-zP-xl9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
